agile: close sprint 91

--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,7 +14,7 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 17:55]
+#+CAPTION: Clock summary at [2016-11-07 Mon 09:46]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
@@ -22,7 +22,7 @@
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
 | Stories                                                                     | 45:50   |       |      | 100.0 |
 | Active                                                                      |         | 45:50 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:23 |   3.0 |
+| COMPLETED Sprint and product backlog grooming                               |         |       | 1:23 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.8 |
 | COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.3 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.5 |
@@ -42,11 +42,12 @@
 | COMPLETED Implement formatter implementation using stitch and wale          |         |       | 1:04 |   2.3 |
 | COMPLETED Move stitching into knit                                          |         |       | 2:13 |   4.8 |
 | COMPLETED Integration of stitch and dogen                                   |         |       | 0:26 |   0.9 |
-| STARTED Supply model references via meta-data rather than command line      |         |       | 0:23 |   0.8 |
+| POSTPONED Supply model references via meta-data rather than command line    |         |       | 0:23 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
-*** STARTED Sprint and product backlog grooming                       :story:
+*** COMPLETED Sprint and product backlog grooming                     :story:
+    CLOSED: [2016-11-07 Mon 09:17]
     CLOCK: [2016-11-03 Thu 17:22]--[2016-11-03 Thu 17:31] =>  0:09
     CLOCK: [2016-10-25 Tue 11:02]--[2016-10-25 Tue 11:13] =>  0:11
     CLOCK: [2016-10-24 Mon 18:28]--[2016-10-24 Mon 18:33] =>  0:05
@@ -739,7 +740,8 @@ Further thoughts:
   generates the file. Actually we probably can't have this in quilt
   because we still need formatter properties.
 
-*** STARTED Supply model references via meta-data rather than command line :story:
+*** POSTPONED Supply model references via meta-data rather than command line :story:
+    CLOSED: [2016-11-07 Mon 09:17]
     CLOCK: [2016-11-03 Thu 17:51]--[2016-11-03 Thu 17:55] =>  0:04
     CLOCK: [2016-11-03 Thu 17:32]--[2016-11-03 Thu 17:51] =>  0:19
 
@@ -803,136 +805,6 @@ path, etc are - and so should remain command line options.
 We need to move these two into the meta-data. This would also mean we
 no longer need to pass in external module paths for references, which
 is much cleaner.
-
-*** Merge properties factory with stitching factory                   :story:
-
-In stitch we still have a few classes that are light on
-responsibilities. One case is the stitching properties factory, traits
-etc. We should merge all of this into a single class, properties
-factory.
-
-*** Rename project directory path                                     :story:
-
-The C++ options have an attribute called
-=project_directory_path=. This is a bit misleading; it is actually the
-top-level directory that will contain the project directory. In
-addition, this is not really C++ specific at all; it would apply to
-any kernel and sub-kernel. We should rename it and move it to output
-options.
-
-*** Add log-level to command line                                     :story:
-
-We are now increasingly logging at trace levels. We need to allow
-users to supply a more fine-grained log configuration. This could be
-done by simply allowing users to set the log level via a command-line
-flag: =log_level=. It would replace verbose.
-
-*** Create a tool to generate product skeletons                       :story:
-
-Now that dogen is evolving to a MDSD tool, it would be great to be
-able to create a complete product skeleton from a tool. This would
-entail:
-
-- directory structure. We should document our standard product
-  directory structure as part of this exercise. Initial document added
-  to manual as "project_structure.org".
-- licence: user can choose one.
-- copyright: input by user, used in CMakeFiles, etc. added to the
-  licence.
-- CI support: travis, appveyor
-- EDE support:
-- CMake support: top-level CMakefiles, CPack. versioning
-  templates, valgrind, doxygen. For CTest we should also generate a
-  "setup cron" and "setup windows scheduler" scripts. User can just
-  run these from the build machine and it will start running CTest.
-- conan support: perhaps with just boost for now
-- agile with first sprint
-- README with emblems.
-
-Name for the tool: dart.
-
-Tool should have different "template sets" so that we could have a
-"standard dogen product" but users can come up with other project
-structures.
-
-Tool should add FindODB if user wants ODB support. Similar for EOS
-when we support it again. We should probably have HTTP links to the
-sources of these packages and download them on the fly.
-
-Tool should also create git repo and do first commit (optional).
-
-For extra bonus points, we should create a project in GitHub, Travis
-and AppVeyor from dart.
-
-We should also generate a RPM/Deb installation script for at least
-boost, doxygen, build essentials, clang.
-
-We should also consider a "refresh" or "force" statement, perhaps on a
-file-by-file basis, which would allow one to regenerate all of these
-files. This would be useful to pick-up changes in travis files, etc.
-
-One problem with travis files is that each project has its own
-dependencies. We should move these over to a shell script and call
-these. The script is not generated or perhaps we just generate a
-skeleton. This also highlights the issue that we have different kinds
-of files:
-
-- files that we generate and expect the user to modify;
-- files that we generate but don't expect user modifications;
-- files that the user generates.
-
-We need a way to classify these.
-
-Dart should use stitch templates to generate files.
-
-We may need some options such as "generate boost test ctest
-integration", etc.
-
-Notes:
-
-- [[https://github.com/elbeno/skeleton][Skeleton]]: project to generate c++ project skeletons.
-
-*** Consider adding =artefact_set= to formatters' model               :story:
-
-We are using collections of artefacts quite a bit, and it makes sense
-to create an abstraction for it such as a =artefact_set=. However, for
-this to work properly we need to add at least one basic behaviour: the
-ability to merge two artefact sets. Or else we will end up having to
-unpack the artefacts, then merging them, then creating a new artefact
-set.
-
-Problem is, we either create the artefact set as a non-generatable
-type - not ideal - or we create it as generatable and need to add this
-as a free function. We need to wait until dogen has support for
-merging code generation.
-
-*** Consider supplying element configuration as a parameter           :story:
-
-Figure out if element configuration is context or if it is better
-expressed as a stand alone formatting parameter.
-
-*** Formatters' repository should be created in quilt                 :story:
-
-At present we are creating the formatters' repository in
-=quilt.cpp=. However it will be shared by all backends in the
-kernel. Move it up to =quilt= level and supply it as a paramter to the
-backends.
-
-*** Initialise formatters in the formatter's translation unit         :story:
-
-At present we are initialising the formatters in each of the facet
-initialisers. However, it makes more sense to initialise them on the
-translation unit for each formatter. This will also make life easier
-when we move to a mustache world where there may not be a formatter
-header file at all.
-
-*** Add knobs to control output of constructors and operators         :story:
-
-At present we are outputting all of the default constructors and the
-operators in the handcrafted templates. Ideally it should just be the
-class name. We need a way of controlling all of the default
-constructors and all of the operators in one go so we can set it on
-the handcrafted profile.
 
 ** Deprecated
 *** CANCELLED Add region support to stitch                            :story:
