--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,19 +12,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-07 Mon 12:19]
+#+CAPTION: Clock summary at [2016-11-07 Mon 13:34]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:15* |      |      | 100.0 |
+| *Total time*                                                                | *4:48* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:15   |      |      | 100.0 |
-| Active                                                                      |        | 4:15 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   3.9 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |  10.6 |
-| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  26.3 |
-| STARTED Try to fix BinTray problems                                         |        |      | 0:36 |  14.1 |
-| STARTED Sort out PIC/PIE linking problems                                   |        |      | 1:55 |  45.1 |
+| Stories                                                                     | 4:48   |      |      | 100.0 |
+| Active                                                                      |        | 4:48 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   3.5 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   9.4 |
+| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  23.3 |
+| STARTED Try to fix BinTray problems                                         |        |      | 1:09 |  24.0 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  39.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -64,6 +64,7 @@ Our README is quite old and stale. We need to:
 - add build instructions
 
 *** STARTED Try to fix BinTray problems                               :story:
+    CLOCK: [2016-11-07 Mon 13:15]--[2016-11-07 Mon 13:34] =>  0:19
     CLOCK: [2016-11-07 Mon 12:20]--[2016-11-07 Mon 12:34] =>  0:14
     CLOCK: [2016-11-07 Mon 11:43]--[2016-11-07 Mon 12:19] =>  0:36
 
@@ -82,7 +83,8 @@ Try to update descriptor and see if it fixes it. Using =$1= actually
 resulted in a =$1= package, presumably because we are not using
 regexes. We need to hard-code the name.
 
-*** STARTED Sort out PIC/PIE linking problems                         :story:
+*** COMPLETED Sort out PIC/PIE linking problems                       :story:
+    CLOSED: [2016-11-07 Mon 13:22]
     CLOCK: [2016-11-07 Mon 10:23]--[2016-11-07 Mon 10:34] =>  0:11
     CLOCK: [2016-11-07 Mon 09:46]--[2016-11-07 Mon 10:22] =>  0:36
     CLOCK: [2016-11-07 Mon 08:00]--[2016-11-07 Mon 09:08] =>  1:08
